--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,9 @@ services:
       #- JWT_SECRET=secret
       #- JWT_HEADER=Authorization
       #- JWT_IN_BODY=true
-    ports:
-      - '8080:80'
-      - '443:443'
+    expose:
+      - 80
+      - 443
     stdin_open: true
     restart: always
     stop_grace_period: 60s
@@ -30,13 +30,22 @@ services:
        - /var/lib/onlyoffice/documentserver/App_Data/cache/files
        - /var/www/onlyoffice/documentserver-example/public/files
        - /usr/share/fonts
+    networks:
+      - dokploy-network
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.onlyoffice.rule=Host(`onlyoffice.eakassociates.com`)
+      - traefik.http.routers.onlyoffice.entrypoints=web
+      - traefik.http.services.onlyoffice.loadbalancer.server.port=80
        
   onlyoffice-rabbitmq:
     container_name: onlyoffice-rabbitmq
     image: rabbitmq
     restart: always
     expose:
-      - '5672'
+      - 5672
+    networks:
+      - dokploy-network
 
   onlyoffice-postgresql:
     container_name: onlyoffice-postgresql
@@ -47,9 +56,14 @@ services:
       - POSTGRES_HOST_AUTH_METHOD=trust
     restart: always
     expose:
-      - '5432'
+      - 5432
     volumes:
       - postgresql_data:/var/lib/postgresql
+    networks:
+      - dokploy-network
 
 volumes:
   postgresql_data:
+networks:
+  dokploy-network:
+    external: true
