--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,9 +35,8 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.onlyoffice.rule=Host(`onlyoffice.eakassociates.com`)
-      - traefik.http.routers.onlyoffice.entrypoints=websecure"
-      - "traefik.http.routers.onlyoffice.tls.certResolver=letsencrypt"
-      - traefik.http.services.onlyoffice.loadbalancer.server.port=443
+      - traefik.http.routers.onlyoffice.entrypoints=web"
+      - traefik.http.services.onlyoffice.loadbalancer.server.port=80
        
   onlyoffice-rabbitmq:
     container_name: onlyoffice-rabbitmq
