--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,10 +34,9 @@ services:
       - dokploy-network
     labels:
       - traefik.enable=true
-      - traefik.http.routers.onlyofficee.rule=Host(`onlyoffice.eakassociates.com`)
-      - traefik.http.routers.onlyofficee.entrypoints=websecure"
-      - "traefik.http.routers.onlyofficee.tls.certResolver=letsencrypt"
-      - traefik.http.services.onlyofficee.loadbalancer.server.port=80
+      - traefik.http.routers.onlyofficeee.rule=Host(`onlyoffice.eakassociates.com`)
+      - traefik.http.routers.onlyofficeee.entrypoints=web"
+      - traefik.http.services.onlyofficeee.loadbalancer.server.port=80
        
   onlyoffice-rabbitmq:
     container_name: onlyoffice-rabbitmq
