--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,10 @@ services:
       - DB_USER=onlyoffice
       - AMQP_URI=amqp://guest:guest@onlyoffice-rabbitmq
       # Uncomment strings below to enable the JSON Web Token validation.
-      #- JWT_ENABLED=true
+      - JWT_ENABLED=true
       - JWT_SECRET=secret
-      #- JWT_HEADER=Authorization
-      #- JWT_IN_BODY=true
+      - JWT_HEADER=Authorization
+      - JWT_IN_BODY=true
     expose:
       - 80
       - 443
@@ -35,7 +35,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.onlyofficeee.rule=Host(`onlyoffice2.eakassociates.com`)
-      - traefik.http.routers.onlyofficeee.entrypoints=web"
+      - traefik.http.routers.onlyofficeee.entrypoints=web
       - traefik.http.services.onlyofficeee.loadbalancer.server.port=80
        
   onlyoffice-rabbitmq:
